fix NotificationEvent path

--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -27,7 +27,7 @@ spring:
          value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
          properties:
             spring.json.trusted.packages: "*"
-            spring.json.value.default.type: "com.tth.event.dto.NotificationEvent"
+            spring.json.value.default.type: "com.tth.commonlibrary.event.dto.NotificationEvent"
 
 # Application configuration
 app:
