--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -29,4 +29,4 @@ spring:
          value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
          properties:
             spring.json.trusted.packages: "*"
-            spring.json.value.default.type: "com.tth.event.dto.NotificationEvent"
+            spring.json.value.default.type: "com.tth.commonlibrary.event.dto.NotificationEvent"
