--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,23 +20,6 @@ services:
    #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
    #      networks:
    #         - hscm-network
-   # kafka:
-   #  image: 'bitnami/kafka:3.7.0'
-   #  container_name: kafka
-   #  hostname: kafka
-   #  ports:
-   #    - '9094:9094'
-   #  environment:
-   #    - KAFKA_CFG_NODE_ID=0
-   #    - KAFKA_CFG_PROCESS_ROLES=controller,broker
-   #    - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-   #    - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-   #    - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-   #    - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-   #    - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-   #    KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-   # networks:
-   #    - hscm-network
    zookeeper:
       image: 'confluentinc/cp-zookeeper:latest'
       container_name: hscm-zookeeper
@@ -53,6 +36,8 @@ services:
       container_name: hscm-kafka
       ports:
          - "9094:9094"
+      expose:
+         - '29092'
       environment:
          - KAFKA_BROKER_ID=1
          - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
@@ -64,6 +49,26 @@ services:
          - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTO=1
       depends_on:
          - zookeeper
+      networks:
+         - hscm-network
+   init-kafka:
+      image: 'confluentinc/cp-kafka:6.1.1'
+      container_name: hscm-init-kafka
+      depends_on:
+         - kafka
+      entrypoint: [ '/bin/sh', '-c' ]
+      command: |
+         "
+         # blocks until kafka is reachable
+         kafka-topics --bootstrap-server kafka:29092 --list
+
+         echo -e 'Creating kafka topics'
+         kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic notification-delivery --replication-factor 1 --partitions 1
+         kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic sample-data --replication-factor 1 --partitions 1
+
+         echo -e 'Successfully created the following topics:'
+         kafka-topics --bootstrap-server kafka:29092 --list
+         "
       networks:
          - hscm-network
    mysql:
@@ -133,8 +138,8 @@ services:
       container_name: hscm-profile
       ports:
          - '8082:8082'
-      #      environment:
-      #         - NEO4J_URI
+      environment:
+         - NEO4J_URI=bolt://neo4j:7687
       #         - NEO4J_USERNAME
       #         - NEO4J_PASSWORD
       depends_on:
