fix flows, add some script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,14 +60,14 @@ services:
       command: |
          "
          # blocks until kafka is reachable
-         kafka-topics --bootstrap-server kafka:29092 --list
+         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --list
 
          echo -e 'Creating kafka topics'
-         kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic notification-delivery --replication-factor 1 --partitions 1
-         kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic sample-data --replication-factor 1 --partitions 1
+         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --create --if-not-exists --topic notification-delivery --replication-factor 1 --partitions 1
+         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --create --if-not-exists --topic sample-data --replication-factor 1 --partitions 1
 
          echo -e 'Successfully created the following topics:'
-         kafka-topics --bootstrap-server kafka:29092 --list
+         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --list
          "
       networks:
          - hscm-network
