--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-name: hscm
+name: hscm-services
 
 networks:
    hscm-network:
@@ -9,70 +9,24 @@ volumes:
    mysql:
 
 services:
-   #   nginx:
-   #      image: 'nginx:1.25.3'
-   #      restart: unless-stopped
-   #      container_name: hscm-nginx
-   #      ports:
-   #         - "80:80"
-   #      volumes:
-   #         - ./docker/server/templates:/etc/nginx/templates
-   #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
-   #      networks:
-   #         - hscm-network
-   zookeeper:
-      image: 'confluentinc/cp-zookeeper:latest'
-      container_name: hscm-zookeeper
-      ports:
-         - "22181:2181"
-      environment:
-         - ZOOKEEPER_SERVER_ID=1
-         - ZOOKEEPER_CLIENT_PORT=2181
-         - ZOOKEEPER_TICK_TIME=2000
-      networks:
-         - hscm-network
    kafka:
-      image: 'confluentinc/cp-kafka:latest'
+      image: 'bitnami/kafka:3.7.0'
       container_name: hscm-kafka
+      hostname: kafka
       ports:
-         - "9094:9094"
-      expose:
-         - '29092'
+         - '9094:9094'
       environment:
-         - KAFKA_BROKER_ID=1
-         - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
-         - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-         - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
-         - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9094
-         - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-         - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
-         - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTO=1
-      depends_on:
-         - zookeeper
-      networks:
-         - hscm-network
-   init-kafka:
-      image: 'confluentinc/cp-kafka:6.1.1'
-      container_name: hscm-init-kafka
-      depends_on:
-         - kafka
-      entrypoint: [ '/bin/sh', '-c' ]
-      command: |
-         "
-         # blocks until kafka is reachable
-         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --list
-
-         echo -e 'Creating kafka topics'
-         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --create --if-not-exists --topic notification-delivery --replication-factor 1 --partitions 1
-         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --create --if-not-exists --topic sample-data --replication-factor 1 --partitions 1
-
-         echo -e 'Successfully created the following topics:'
-         kafka-topics --bootstrap-server PLAINTEXT://kafka:9094 --list
-         "
-      networks:
-         - hscm-network
+         - KAFKA_CFG_NODE_ID=0
+         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+         - KAFKA_CFG_PROCESS_ROLES=controller,broker
+         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
    mysql:
       image: 'mysql:8.0.39-debian'
+      restart: unless-stopped
       hostname: mysql
       container_name: hscm-mysql
       ports:
@@ -86,6 +40,7 @@ services:
          - hscm-network
    mongodb:
       image: 'bitnami/mongodb:7.0.11'
+      restart: unless-stopped
       hostname: mongodb
       container_name: hscm-mongodb
       ports:
@@ -97,6 +52,7 @@ services:
          - hscm-network
    neo4j:
       image: 'neo4j:latest'
+      restart: unless-stopped
       hostname: neo4j
       container_name: hscm-neo4j
       ports:
