--- a/file-service/src/main/resources/application.yaml
+++ b/file-service/src/main/resources/application.yaml
@@ -13,11 +13,12 @@ spring:
    application:
       name: file-service
    kafka:
-      bootstrap-servers: PLAINTEXT://kafka:9094
       producer:
+         bootstrap-servers: localhost:9094
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
+         bootstrap-servers: localhost:9094
          auto-offset-reset: earliest
          group-id: file-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
