--- a/shipping-service/src/main/resources/application.yaml
+++ b/shipping-service/src/main/resources/application.yaml
@@ -16,11 +16,12 @@ spring:
       mongodb:
          uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/shipping_service?authSource=admin}
    kafka:
-      bootstrap-servers: PLAINTEXT://kafka:9094
       producer:
+         bootstrap-servers: localhost:9094
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
+         bootstrap-servers: localhost:9094
          auto-offset-reset: earliest
          group-id: shipping-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
