--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -19,11 +19,11 @@ spring:
          password: ${NEO4J_PASSWORD:admin@123}
    kafka:
       producer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          auto-offset-reset: earliest
          group-id: profile-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
