--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
    #         - hscm-network
    kafka:
       image: 'bitnami/kafka:3.7.0'
+      restart: unless-stopped
       container_name: hscm-kafka
       hostname: kafka
       ports:
@@ -73,8 +74,61 @@ services:
          - NEO4J_AUTH=neo4j/admin@123
       networks:
          - hscm-network
+   hscm-api-gateway:
+      build: ./api-gateway
+      image: ghcr.io/hiepthanhtran/hscm-api-gateway:latest
+      container_name: hscm-api-gateway
+      ports:
+         - '8888:8888'
+      environment:
+         - FILE_SERVICE_URL=http://hscm-file:8887
+         - NOTIFICATION_SERVICE_URL=http://hscm-notification:8886
+         - CART_SERVICE_URL=http://hscm-cart:8081
+         - PROFILE_SERVICE_URL=http://hscm-profile:8082
+         - IDENTITY_SERVICE_URL=http://hscm-identity:8083
+         - PRODUCT_SERVICE_URL=http://hscm-product:8084
+         - RATING_SERVICE_URL=http://hscm-rating:8085
+         - INVENTORY_SERVICE_URL=http://hscm-inventory:8086
+         - ORDER_SERVICE_URL=http://hscm-order:8087
+         - SHIPPING_SERVICE_URL=http://hscm-shipping:8088
+      depends_on:
+         - kafka
+      networks:
+         - hscm-network
+   hscm-file:
+      build: ./file-service
+      image: ghcr.io/hiepthanhtran/hscm-file-service:latest
+      container_name: hscm-file
+      ports:
+         - '8887:8887'
+      environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+         - AWS_SECRET=${AWS_SECRET}
+         - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      depends_on:
+         - kafka
+      networks:
+         - hscm-network
+   hscm-notification:
+      build: ./notification-service
+      image: ghcr.io/hiepthanhtran/hscm-notification-service:latest
+      container_name: hscm-notification
+      ports:
+         - '8886:8886'
+      environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+         - MAIL_API_KEY=${MAIL_API_KEY}
+         - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
+      #         - EMAIL_SERVICE_URL
+      depends_on:
+         - kafka
+         - mongodb
+      networks:
+         - hscm-network
    #   hscm-keycloak:
    #      image: 'quay.io/keycloak/keycloak:25.0.0'
+   #      restart: unless-stopped
    #      hostname: hscm-keycloak
    #      container_name: hscm-keycloak
    #      command: [ 'start-dev --import-realm' ]
@@ -92,8 +146,9 @@ services:
       ports:
          - '8081:8081'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
-      #         - PRODUCT_SERVICE_URL
+         - PRODUCT_SERVICE_URL=http://hscm-product:8084
       depends_on:
          - kafka
          - mongodb
@@ -106,6 +161,7 @@ services:
       ports:
          - '8082:8082'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - NEO4J_URI=bolt://neo4j:7687
       #         - NEO4J_USERNAME
       #         - NEO4J_PASSWORD
@@ -121,17 +177,18 @@ services:
       ports:
          - '8083:8083'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
-      #         - DBMS_USERNAME
-      #         - DBMS_PASSWORD
+         - DBMS_USERNAME=root
+         - DBMS_PASSWORD=root
+         - PROFILE_SERVICE_URL=http://hscm-profile:8082
+         - FILE_SERVICE_URL=http://hscm-file:8887
       #         - JWT_SIGNER_KEY
       #         - JWT_VALID_DURATION
       #         - JWT_REFRESHABLE_DURATION
       #         - IDENTITY_CLIENT_ID
       #         - IDENTITY_CLIENT_SECRET
       #         - IDENTITY_REDIRECT_URI
-      #         - PROFILE_SERVICE_URL
-      #         - FILE_SERVICE_URL
       depends_on:
          - kafka
          - mysql
@@ -144,8 +201,9 @@ services:
       ports:
          - '8084:8084'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
-      #         - PROFILE_SERVICE_URL
+         - PROFILE_SERVICE_URL=http://hscm-profile:8082
       depends_on:
          - kafka
          - mongodb
@@ -158,9 +216,10 @@ services:
       ports:
          - '8085:8085'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
-      #         - IDENTITY_SERVICE_URL
-      #         - PROFILE_SERVICE_URL
+         - PROFILE_SERVICE_UR= http://hscm-profile:8082
+         - IDENTITY_SERVICE_URL=http://hscm-identity:8083
       depends_on:
          - kafka
          - mongodb
@@ -173,10 +232,11 @@ services:
       ports:
          - '8086:8086'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
-      #         - DBMS_USERNAME
-      #         - DBMS_PASSWORD
-      #         - PRODUCT_SERVICE_URL
+         - DBMS_USERNAME=root
+         - DBMS_PASSWORD=root
+         - PRODUCT_SERVICE_URL=http://hscm-product:8084
       depends_on:
          - kafka
          - mysql
@@ -189,13 +249,14 @@ services:
       ports:
          - '8087:8087'
       environment:
-         - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/order_service
-      #         - DBMS_USERNAME
-      #         - DBMS_PASSWORD
-      #         - IDENTITY_SERVICE_URL
-      #         - PRODUCT_SERVICE_URL
-      #         - INVENTORY_SERVICE_URL
+         - DBMS_USERNAME=root
+         - DBMS_PASSWORD=root
+         - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+         - IDENTITY_SERVICE_URL=http://hscm-identity:8083
+         - PRODUCT_SERVICE_URL=http://hscm-product:8084
+         - INVENTORY_SERVICE_URL=http://hscm-inventory:8086
       depends_on:
          - kafka
          - mysql
@@ -208,61 +269,11 @@ services:
       ports:
          - '8088:8088'
       environment:
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
-         - IDENTITY_SERVICE_URL
+         - IDENTITY_SERVICE_URL=http://hscm-identity:8083
       depends_on:
          - kafka
          - mysql
-      networks:
-         - hscm-network
-   hscm-notification:
-      build: ./notification-service
-      image: ghcr.io/hiepthanhtran/hscm-notification-service:latest
-      container_name: hscm-notification
-      ports:
-         - '8886:8886'
-      environment:
-         - MAIL_API_KEY=${MAIL_API_KEY}
-         - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
-      #         - EMAIL_SERVICE_URL
-      depends_on:
-         - kafka
-         - mongodb
-      networks:
-         - hscm-network
-   hscm-file:
-      build: ./file-service
-      image: ghcr.io/hiepthanhtran/hscm-file-service:latest
-      container_name: hscm-file
-      ports:
-         - '8887:8887'
-      environment:
-         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-         - AWS_SECRET=${AWS_SECRET}
-         - S3_BUCKET_NAME=${S3_BUCKET_NAME}
-      depends_on:
-         - kafka
-      networks:
-         - hscm-network
-   hscm-api-gateway:
-      build: ./api-gateway
-      image: ghcr.io/hiepthanhtran/hscm-api-gateway:latest
-      container_name: hscm-api-gateway
-      ports:
-         - '8888:8888'
-      #      environment:
-      #         - IDENTITY_SERVICE_URL
-      #         - FILE_SERVICE_URL
-      #         - NOTIFICATION_SERVICE_URL
-      #         - SHIPPING_SERVICE_URL
-      #         - PROFILE_SERVICE_URL
-      #         - IDENTITY_SERVICE_URL
-      #         - PRODUCT_SERVICE_URL
-      #         - SHIPPING_SERVICE_URL
-      #         - SHIPPING_SERVICE_URL
-      #         - ORDER_SERVICE_URL
-      #         - SHIPPING_SERVICE_URL
-      depends_on:
-         - kafka
       networks:
          - hscm-network
