--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -22,11 +22,11 @@ spring:
          ddl-auto: update
    kafka:
       producer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          auto-offset-reset: earliest
          group-id: order-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
