--- a/rating-service/src/main/resources/application.yaml
+++ b/rating-service/src/main/resources/application.yaml
@@ -17,11 +17,11 @@ spring:
          uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/rating_service?authSource=admin}
    kafka:
       producer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
-         bootstrap-servers: localhost:9094
+         bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
          auto-offset-reset: earliest
          group-id: rating-service-group
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -33,7 +33,7 @@ spring:
 # Application configuration
 app:
    services:
-      identity:
-         url: ${IDENTITY_SERVICE_URL:http://localhost:8083/identity}
       profile:
          url: ${PROFILE_SERVICE_URL:http://localhost:8082/profile}
+      identity:
+         url: ${IDENTITY_SERVICE_URL:http://localhost:8083/identity}
