--- a/identity-service/Dockerfile
+++ b/identity-service/Dockerfile
@@ -10,4 +10,4 @@ RUN chmod +x wait-for-it.sh
 
 COPY target/*.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["./wait-for-it.sh", "mysql:3306", "--timeout=300", "--", "java", "-jar", "/app.jar"]
