--- a/.github/workflows/gateway-ci.yaml
+++ b/.github/workflows/gateway-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./gateway
+               context: ./gateway-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-gateway:latest
