--- a/.github/workflows/cart-ci.yaml
+++ b/.github/workflows/cart-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./cart
+               context: ./cart-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-cart:latest
