--- a/.github/workflows/inventory-ci.yaml
+++ b/.github/workflows/inventory-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./inventory
+               context: ./inventory-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-inventory:latest
