--- a/.github/workflows/notification-ci.yaml
+++ b/.github/workflows/notification-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./notification
+               context: ./notification-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-notification:latest
