--- a/.github/workflows/profile-ci.yaml
+++ b/.github/workflows/profile-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./profile
+               context: ./profile-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-profile:latest
