--- a/.github/workflows/rating-ci.yaml
+++ b/.github/workflows/rating-ci.yaml
@@ -54,6 +54,6 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               context: ./rating
+               context: ./rating-service
                push: true
                tags: ghcr.io/hiepthanhtran/hscms-rating:latest
