--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-name: scms
+name: hscms
 
 networks:
-   scms-network:
+   hscms-network:
       driver: bridge
-      name: scms-network
+      name: hscms-network
 
 volumes:
    mysql:
@@ -19,7 +19,7 @@ services:
    #         - ./docker/server/templates:/etc/nginx/templates
    #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
    #      networks:
-   #         - scms-network
+   #         - hscms-network
    kafka:
       image: 'bitnami/kafka:3.7.0'
       restart: unless-stopped
@@ -38,7 +38,7 @@ services:
          - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
          - ALLOW_PLAINTEXT_LISTENER=yes
          - KAFKA_CFG_NODE_ID=1
-         - KAFKA_KRAFT_CLUSTER_ID=scms-kafka
+         - KAFKA_KRAFT_CLUSTER_ID=hscms-kafka
          - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       healthcheck:
          test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
@@ -46,7 +46,7 @@ services:
          timeout: 5s
          retries: 5
       networks:
-         - scms-network
+         - hscms-network
    mysql:
       image: 'mysql:8.0.39-debian'
       restart: unless-stopped
@@ -60,7 +60,7 @@ services:
          - ./docker/db/mysql_initial.sql:/docker-entrypoint-initdb.d/mysql_initial.sql
          - mysql:/var/lib/mysql
       networks:
-         - scms-network
+         - hscms-network
    mongodb:
       image: 'bitnami/mongodb:7.0.11'
       restart: unless-stopped
@@ -72,7 +72,7 @@ services:
          - MONGODB_ROOT_USER=root
          - MONGODB_ROOT_PASSWORD=root
       networks:
-         - scms-network
+         - hscms-network
    neo4j:
       image: 'neo4j:latest'
       restart: unless-stopped
@@ -84,12 +84,12 @@ services:
       environment:
          - NEO4J_AUTH=neo4j/admin@123
       networks:
-         - scms-network
-   #   scms-keycloak:
+         - hscms-network
+   #   hscms-keycloak:
    #      image: 'quay.io/keycloak/keycloak:25.0.0'
    #      restart: unless-stopped
-   #      hostname: scms-keycloak
-   #      container_name: scms-keycloak
+   #      hostname: hscms-keycloak
+   #      container_name: hscms-keycloak
    #      command: [ 'start-dev --import-realm' ]
    #      ports:
    #         - '8180:8080'
@@ -97,32 +97,32 @@ services:
    #         - KEYCLOAK_ADMIN=admin
    #         - KEYCLOAK_ADMIN_PASSWORD=admin
    #      networks:
-   #         - scms-network
-   scms-api-gateway:
+   #         - hscms-network
+   hscms-api-gateway:
       build: ./api-gateway
-      image: ghcr.io/hiepthanhtran/scms-api-gateway:latest
+      image: ghcr.io/hiepthanhtran/hscms-gateway:latest
       restart: unless-stopped
-      container_name: scms-api-gateway
+      container_name: hscms-api-gateway
       ports:
          - '8888:8888'
       environment:
-         - FILE_SERVICE_URL=http://scms-file:8887
-         - NOTIFICATION_SERVICE_URL=http://scms-notification:8886
-         - CART_SERVICE_URL=http://scms-cart:8081
-         - PROFILE_SERVICE_URL=http://scms-profile:8082
-         - IDENTITY_SERVICE_URL=http://scms-identity:8083
-         - PRODUCT_SERVICE_URL=http://scms-product:8084
-         - RATING_SERVICE_URL=http://scms-rating:8085
-         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
-         - ORDER_SERVICE_URL=http://scms-order:8087
-         - SHIPPING_SERVICE_URL=http://scms-shipping:8088
+         - FILE_SERVICE_URL=http://hscms-file:8887
+         - NOTIFICATION_SERVICE_URL=http://hscms-notification:8886
+         - CART_SERVICE_URL=http://hscms-cart:8081
+         - PROFILE_SERVICE_URL=http://hscms-profile:8082
+         - IDENTITY_SERVICE_URL=http://hscms-identity:8083
+         - PRODUCT_SERVICE_URL=http://hscms-product:8084
+         - RATING_SERVICE_URL=http://hscms-rating:8085
+         - INVENTORY_SERVICE_URL=http://hscms-inventory:8086
+         - ORDER_SERVICE_URL=http://hscms-order:8087
+         - SHIPPING_SERVICE_URL=http://hscms-shipping:8088
       networks:
-         - scms-network
-   scms-file:
+         - hscms-network
+   hscms-file:
       build: ./file-service
-      image: ghcr.io/hiepthanhtran/scms-file-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-file-service:latest
       restart: unless-stopped
-      container_name: scms-file
+      container_name: hscms-file
       ports:
          - '8887:8887'
       environment:
@@ -133,12 +133,12 @@ services:
       depends_on:
          - kafka
       networks:
-         - scms-network
-   scms-notification:
+         - hscms-network
+   hscms-notification:
       build: ./notification-service
-      image: ghcr.io/hiepthanhtran/scms-notification-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-notification-service:latest
       restart: unless-stopped
-      container_name: scms-notification
+      container_name: hscms-notification
       ports:
          - '8886:8886'
       environment:
@@ -150,28 +150,28 @@ services:
          - kafka
          - mongodb
       networks:
-         - scms-network
-   scms-cart:
+         - hscms-network
+   hscms-cart:
       build: ./cart-service
-      image: ghcr.io/hiepthanhtran/scms-cart-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-cart-service:latest
       restart: unless-stopped
-      container_name: scms-cart
+      container_name: hscms-cart
       ports:
          - '8081:8081'
       environment:
          - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
          - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
-#         - PRODUCT_SERVICE_URL=http://scms-product:8084
+#         - PRODUCT_SERVICE_URL=http://hscms-product:8084
       depends_on:
          - kafka
          - mongodb
       networks:
-         - scms-network
-   scms-profile:
+         - hscms-network
+   hscms-profile:
       build: ./profile-service
-      image: ghcr.io/hiepthanhtran/scms-profile-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-profile-service:latest
       restart: unless-stopped
-      container_name: scms-profile
+      container_name: hscms-profile
       ports:
          - '8082:8082'
       environment:
@@ -183,12 +183,12 @@ services:
          - kafka
          - neo4j
       networks:
-         - scms-network
-   scms-identity:
+         - hscms-network
+   hscms-identity:
       build: ./identity-service
-      image: ghcr.io/hiepthanhtran/scms-identity-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-identity-service:latest
       restart: unless-stopped
-      container_name: scms-identity
+      container_name: hscms-identity
       ports:
          - '8083:8083'
       environment:
@@ -196,8 +196,8 @@ services:
          - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-#         - PROFILE_SERVICE_URL=http://scms-profile:8082
-#         - FILE_SERVICE_URL=http://scms-file:8887
+#         - PROFILE_SERVICE_URL=http://hscms-profile:8082
+#         - FILE_SERVICE_URL=http://hscms-file:8887
       #         - JWT_SIGNER_KEY
       #         - JWT_VALID_DURATION
       #         - JWT_REFRESHABLE_DURATION
@@ -205,45 +205,45 @@ services:
          - kafka
          - mysql
       networks:
-         - scms-network
-   scms-product:
+         - hscms-network
+   hscms-product:
       build: ./product-service
-      image: ghcr.io/hiepthanhtran/scms-product-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-product-service:latest
       restart: unless-stopped
-      container_name: scms-product
+      container_name: hscms-product
       ports:
          - '8084:8084'
       environment:
          - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
          - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
-#         - PROFILE_SERVICE_URL=http://scms-profile:8082
+#         - PROFILE_SERVICE_URL=http://hscms-profile:8082
       depends_on:
          - kafka
          - mongodb
       networks:
-         - scms-network
-   scms-rating:
+         - hscms-network
+   hscms-rating:
       build: ./rating-service
-      image: ghcr.io/hiepthanhtran/scms-rating-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-rating-service:latest
       restart: unless-stopped
-      container_name: scms-rating
+      container_name: hscms-rating
       ports:
          - '8085:8085'
       environment:
          - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
          - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
-#         - PROFILE_SERVICE_UR= http://scms-profile:8082
-#         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+#         - PROFILE_SERVICE_UR= http://hscms-profile:8082
+#         - IDENTITY_SERVICE_URL=http://hscms-identity:8083
       depends_on:
          - kafka
          - mongodb
       networks:
-         - scms-network
-   scms-inventory:
+         - hscms-network
+   hscms-inventory:
       build: ./inventory-service
-      image: ghcr.io/hiepthanhtran/scms-inventory-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-inventory-service:latest
       restart: unless-stopped
-      container_name: scms-inventory
+      container_name: hscms-inventory
       ports:
          - '8086:8086'
       environment:
@@ -251,17 +251,17 @@ services:
          - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-#         - PRODUCT_SERVICE_URL=http://scms-product:8084
+#         - PRODUCT_SERVICE_URL=http://hscms-product:8084
       depends_on:
          - kafka
          - mysql
       networks:
-         - scms-network
-   scms-order:
+         - hscms-network
+   hscms-order:
       build: ./order-service
-      image: ghcr.io/hiepthanhtran/scms-order-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-order-service:latest
       restart: unless-stopped
-      container_name: scms-order
+      container_name: hscms-order
       ports:
          - '8087:8087'
       environment:
@@ -270,27 +270,27 @@ services:
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
          - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-#         - IDENTITY_SERVICE_URL=http://scms-identity:8083
-#         - PRODUCT_SERVICE_URL=http://scms-product:8084
-#         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
+#         - IDENTITY_SERVICE_URL=http://hscms-identity:8083
+#         - PRODUCT_SERVICE_URL=http://hscms-product:8084
+#         - INVENTORY_SERVICE_URL=http://hscms-inventory:8086
       depends_on:
          - kafka
          - mysql
       networks:
-         - scms-network
-   scms-shipping:
+         - hscms-network
+   hscms-shipping:
       build: ./shipping-service
-      image: ghcr.io/hiepthanhtran/scms-shipping-service:latest
+      image: ghcr.io/hiepthanhtran/hscms-shipping-service:latest
       restart: unless-stopped
-      container_name: scms-shipping
+      container_name: hscms-shipping
       ports:
          - '8088:8088'
       environment:
          - KAFKA_BOOTSTRAP_SERVERS=kafka:9094
          - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
-#         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+#         - IDENTITY_SERVICE_URL=http://hscms-identity:8083
       depends_on:
          - kafka
          - mongodb
       networks:
-         - scms-network
+         - hscms-network
