edit: Dockerfile, GitHub workflows

--- a/identity-service/Dockerfile
+++ b/identity-service/Dockerfile
@@ -11,3 +11,5 @@ RUN chmod +x wait-for-it.sh
 COPY target/*.jar app.jar
 
 ENTRYPOINT ["./wait-for-it.sh", "mysql:3306", "--timeout=300", "--", "java", "-jar", "/app.jar"]
+
+LABEL org.opencontainers.image.source=https://github.com/hiepthanhtran/microservices-scms
