--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -56,4 +56,4 @@ jobs:
             with:
                context: ./{{SERVICE_NAME}}-service
                push: true
-               tags: ghcr.io/hiepthanhtran/hscms-{{SERVICE_NAME}}:latest
+               tags: ghcr.io/hiepthanhtran/scms-{{SERVICE_NAME}}:latest
