--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -59,6 +59,7 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
+               visibility: public
                context: ./{{SERVICE_NAME}}-service
                push: true
                tags: ghcr.io/hiepthanhtran/scms-{{SERVICE_NAME}}:latest
