--- a/.github/workflows/profile-ci.yaml
+++ b/.github/workflows/profile-ci.yaml
@@ -59,6 +59,7 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
+               visibility: public
                context: ./profile-service
                push: true
                tags: ghcr.io/hiepthanhtran/scms-profile:latest
