--- a/.github/workflows/shipping-ci.yaml
+++ b/.github/workflows/shipping-ci.yaml
@@ -59,6 +59,7 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
+               visibility: public
                context: ./shipping-service
                push: true
                tags: ghcr.io/hiepthanhtran/scms-shipping:latest
