--- a/.github/workflows/profile-ci.yaml
+++ b/.github/workflows/profile-ci.yaml
@@ -59,7 +59,14 @@ jobs:
             if: ${{ github.ref == 'refs/heads/main' }}
             uses: docker/build-push-action@v6
             with:
-               visibility: public
                context: ./profile-service
                push: true
                tags: ghcr.io/hiepthanhtran/scms-profile:latest
+         -  name: Make Docker image public using REST API
+            if: ${{ github.ref == 'refs/heads/main' }}
+            run: |
+               curl -X PATCH \
+                 -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                 -H "Accept: application/vnd.github.v3+json" \
+                 https://api.github.com/user/packages/container/scms-profile/versions \
+                 -d '{"visibility":"public"}'
