--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,37 @@ volumes:
    mysql:
 
 services:
+   zookeeper:
+      image: confluentinc/cp-zookeeper:6.2.1
+      restart: unless-stopped
+      hostname: zookeeper
+      container_name: zookeeper
+      environment:
+         ZOOKEEPER_CLIENT_PORT: '2181'
+         ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
+   kafka:
+      image: confluentinc/cp-kafka:6.2.1
+      restart: unless-stopped
+      hostname: kafka
+      container_name: kafka
+      ports:
+         - 9092:9092
+      environment:
+         KAFKA_BROKER_ID: '0'
+         KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+         KAFKA_NUM_PARTITIONS: '12'
+         KAFKA_COMPRESSION_TYPE: 'gzip'
+         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
+         KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: '1'
+         KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: '1'
+         KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
+         KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
+         KAFKA_JMX_PORT: '9091'
+         KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+         KAFKA_AUTHORIZER_CLASS_NAME: 'kafka.security.auth.SimpleAclAuthorizer'
+         KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+      links:
+         - zookeeper
    #   nginx:
    #      image: 'nginx:1.25.3'
    #      restart: unless-stopped
@@ -20,33 +51,33 @@ services:
    #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
    #      networks:
    #         - scms-network
-   kafka:
-      image: 'bitnami/kafka:3.7.0'
-      restart: unless-stopped
-      hostname: kafka
-      container_name: kafka
-      ports:
-         - '9094:9094'
-      environment:
-         - KAFKA_ENABLE_KRAFT=yes
-         - KAFKA_CFG_PROCESS_ROLES=controller,broker
-         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-         - KAFKA_BROKER_ID=1
-         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-         - ALLOW_PLAINTEXT_LISTENER=yes
-         - KAFKA_CFG_NODE_ID=1
-         - KAFKA_KRAFT_CLUSTER_ID=kafka
-         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      healthcheck:
-         test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
-         interval: 10s
-         timeout: 5s
-         retries: 5
-      networks:
-         - scms-network
+#   kafka:
+#      image: 'bitnami/kafka:3.7.0'
+#      restart: unless-stopped
+#      hostname: kafka
+#      container_name: kafka
+#      ports:
+#         - '9094:9094'
+#      environment:
+#         - KAFKA_ENABLE_KRAFT=yes
+#         - KAFKA_CFG_PROCESS_ROLES=controller,broker
+#         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+#         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+#         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+#         - KAFKA_BROKER_ID=1
+#         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+#         - ALLOW_PLAINTEXT_LISTENER=yes
+#         - KAFKA_CFG_NODE_ID=1
+#         - KAFKA_KRAFT_CLUSTER_ID=kafka
+#         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+#      healthcheck:
+#         test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
+#         interval: 10s
+#         timeout: 5s
+#         retries: 5
+#      networks:
+#         - scms-network
    mysql:
       image: 'mysql:8.0.39-debian'
       restart: unless-stopped
@@ -127,7 +158,7 @@ services:
       ports:
          - '8887:8887'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
          - AWS_SECRET=${AWS_SECRET}
          - S3_BUCKET_NAME=${S3_BUCKET_NAME}
@@ -143,7 +174,7 @@ services:
       ports:
          - '8886:8886'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MAIL_API_KEY=${MAIL_API_KEY}
          - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
       #         - EMAIL_SERVICE_URL
@@ -160,7 +191,7 @@ services:
       ports:
          - '8081:8081'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
          - PRODUCT_SERVICE_URL=http://scms-product:8084
       depends_on:
@@ -176,7 +207,7 @@ services:
       ports:
          - '8082:8082'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - NEO4J_URI=bolt://neo4j:7687
          - NEO4J_USERNAME=neo4j
          - NEO4J_PASSWORD=admin
@@ -193,7 +224,7 @@ services:
       ports:
          - '8083:8083'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
@@ -215,7 +246,7 @@ services:
       ports:
          - '8084:8084'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
          - PROFILE_SERVICE_URL=http://scms-profile:8082
       depends_on:
@@ -231,7 +262,7 @@ services:
       ports:
          - '8085:8085'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
          - PROFILE_SERVICE_UR= http://scms-profile:8082
          - IDENTITY_SERVICE_URL=http://scms-identity:8083
@@ -248,7 +279,7 @@ services:
       ports:
          - '8086:8086'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
@@ -266,7 +297,7 @@ services:
       ports:
          - '8087:8087'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/order_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
@@ -287,7 +318,7 @@ services:
       ports:
          - '8088:8088'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=PLAINTEXT://:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
          - IDENTITY_SERVICE_URL=http://scms-identity:8083
       depends_on:
