--- a/identity-service/src/main/resources/application.yaml
+++ b/identity-service/src/main/resources/application.yaml
@@ -22,6 +22,8 @@ spring:
          ddl-auto: update
    kafka:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
+      properties:
+         security.protocol: PLAINTEXT
       producer:
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
