--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
          password: ${NEO4J_PASSWORD:admin@123}
    kafka:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
+      properties:
+         security.protocol: PLAINTEXT
       producer:
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
