--- a/.github/workflow-template.yaml
+++ b/.github/workflow-template.yaml
@@ -4,7 +4,7 @@ on:
    push:
       branches: [ "main" ]
       paths:
-         - "{{SERVICE_NAME}}/**"
+         - "{{SERVICE_NAME}}-service/**"
          - ".github/workflows/actions/action.yaml"
          - ".github/workflows/{{SERVICE_NAME}}-ci.yaml"
          - "pom.xml"
