--- a/.github/workflows/identity-ci.yaml
+++ b/.github/workflows/identity-ci.yaml
@@ -4,7 +4,7 @@ on:
    push:
       branches: [ "main" ]
       paths:
-         - "identity/**"
+         - "identity-service/**"
          - ".github/workflows/actions/action.yaml"
          - ".github/workflows/identity-ci.yaml"
          - "pom.xml"
