--- a/.github/workflows/profile-ci.yaml
+++ b/.github/workflows/profile-ci.yaml
@@ -4,7 +4,7 @@ on:
    push:
       branches: [ "main" ]
       paths:
-         - "profile/**"
+         - "profile-service/**"
          - ".github/workflows/actions/action.yaml"
          - ".github/workflows/profile-ci.yaml"
          - "pom.xml"
