--- a/.github/workflows/rating-ci.yaml
+++ b/.github/workflows/rating-ci.yaml
@@ -4,7 +4,7 @@ on:
    push:
       branches: [ "main" ]
       paths:
-         - "rating/**"
+         - "rating-service/**"
          - ".github/workflows/actions/action.yaml"
          - ".github/workflows/rating-ci.yaml"
          - "pom.xml"
