--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,34 +10,34 @@ volumes:
 
 services:
    zookeeper:
-      image: confluentinc/cp-zookeeper:6.2.1
+      image: 'confluentinc/cp-zookeeper:6.2.1'
       restart: unless-stopped
       hostname: zookeeper
       container_name: zookeeper
       environment:
-         ZOOKEEPER_CLIENT_PORT: '2181'
-         ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
+         - ZOOKEEPER_CLIENT_PORT=2181
+         - ZOOKEEPER_ADMIN_ENABLE_SERVER=false
    kafka:
-      image: confluentinc/cp-kafka:6.2.1
+      image: 'confluentinc/cp-kafka:6.2.1'
       restart: unless-stopped
       hostname: kafka
       container_name: kafka
       ports:
          - 9092:9092
       environment:
-         KAFKA_BROKER_ID: '0'
-         KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-         KAFKA_NUM_PARTITIONS: '12'
-         KAFKA_COMPRESSION_TYPE: 'gzip'
-         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
-         KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: '1'
-         KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: '1'
-         KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
-         KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
-         KAFKA_JMX_PORT: '9091'
-         KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-         KAFKA_AUTHORIZER_CLASS_NAME: 'kafka.security.auth.SimpleAclAuthorizer'
-         KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+         - KAFKA_BROKER_ID=0
+         - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+         - KAFKA_NUM_PARTITIONS=12
+         - KAFKA_COMPRESSION_TYPE=gzip
+         - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+         - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+         - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+         - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092'=
+         - KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE=false
+         - KAFKA_JMX_PORT=9091
+         - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+         - KAFKA_AUTHORIZER_CLASS_NAME=kafka.security.auth.SimpleAclAuthorizer
+         - KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND=true
       links:
          - zookeeper
    #   nginx:
@@ -51,33 +51,33 @@ services:
    #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
    #      networks:
    #         - scms-network
-#   kafka:
-#      image: 'bitnami/kafka:3.7.0'
-#      restart: unless-stopped
-#      hostname: kafka
-#      container_name: kafka
-#      ports:
-#         - '9094:9094'
-#      environment:
-#         - KAFKA_ENABLE_KRAFT=yes
-#         - KAFKA_CFG_PROCESS_ROLES=controller,broker
-#         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-#         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-#         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-#         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-#         - KAFKA_BROKER_ID=1
-#         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-#         - ALLOW_PLAINTEXT_LISTENER=yes
-#         - KAFKA_CFG_NODE_ID=1
-#         - KAFKA_KRAFT_CLUSTER_ID=kafka
-#         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-#      healthcheck:
-#         test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
-#         interval: 10s
-#         timeout: 5s
-#         retries: 5
-#      networks:
-#         - scms-network
+   #   kafka:
+   #      image: 'bitnami/kafka:3.7.0'
+   #      restart: unless-stopped
+   #      hostname: kafka
+   #      container_name: kafka
+   #      ports:
+   #         - '9094:9094'
+   #      environment:
+   #         - KAFKA_ENABLE_KRAFT=yes
+   #         - KAFKA_CFG_PROCESS_ROLES=controller,broker
+   #         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+   #         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+   #         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+   #         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+   #         - KAFKA_BROKER_ID=1
+   #         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+   #         - ALLOW_PLAINTEXT_LISTENER=yes
+   #         - KAFKA_CFG_NODE_ID=1
+   #         - KAFKA_KRAFT_CLUSTER_ID=kafka
+   #         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+   #      healthcheck:
+   #         test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
+   #         interval: 10s
+   #         timeout: 5s
+   #         retries: 5
+   #      networks:
+   #         - scms-network
    mysql:
       image: 'mysql:8.0.39-debian'
       restart: unless-stopped
