--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -8,7 +8,7 @@
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>api-gateway</artifactId>
+    <artifactId>gateway-service</artifactId>
     <version>${revision}</version>
     <name>api-gateway</name>
     <description>API Gateway | Microservices Architecture</description>
