--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,18 @@ volumes:
    mysql:
 
 services:
+   #   nginx:
+   #      image: 'nginx:1.25.3'
+   #      restart: unless-stopped
+   #      hostname: nginx
+   #      container_name: nginx
+   #      ports:
+   #         - "80:80"
+   #      volumes:
+   #         - ./docker/nginx/templates:/etc/nginx/templates
+   #         - ./docker/nginx/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
+   #      networks:
+   #         - scms-network
    zookeeper:
       image: 'confluentinc/cp-zookeeper:6.2.1'
       restart: unless-stopped
@@ -17,6 +29,8 @@ services:
       environment:
          - ZOOKEEPER_CLIENT_PORT=2181
          - ZOOKEEPER_ADMIN_ENABLE_SERVER=false
+      networks:
+         - scms-network
    kafka:
       image: 'confluentinc/cp-kafka:6.2.1'
       restart: unless-stopped
@@ -40,42 +54,32 @@ services:
          - KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND=true
       links:
          - zookeeper
-   #   nginx:
-   #      image: 'nginx:1.25.3'
+      networks:
+         - scms-network
+   swagger-ui:
+      image: 'swaggerapi/swagger-ui:v4.16.0'
+      restart: unless-stopped
+      hostname: swagger-ui
+      container_name: swagger-ui
+      environment:
+         - BASE_URL=/swagger-ui
+         - URLS
+         - OAUTH_CLIENT_ID=swagger-ui
+         - OAUTH_USE_PKCE=true
+      networks:
+         - scms-network
+   #   phpmyadmin:
+   #      image: 'phpmyadmin/phpmyadmin:5.1.1'
    #      restart: unless-stopped
-   #      container_name: nginx
+   #      hostname: phpmyadmin
+   #      container_name: phpmyadmin
    #      ports:
-   #         - "80:80"
-   #      volumes:
-   #         - ./docker/server/templates:/etc/nginx/templates
-   #         - ./docker/server/configuration/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
-   #      networks:
-   #         - scms-network
-   #   kafka:
-   #      image: 'bitnami/kafka:3.7.0'
-   #      restart: unless-stopped
-   #      hostname: kafka
-   #      container_name: kafka
-   #      ports:
-   #         - '9094:9094'
+   #         - '8090:81'
    #      environment:
-   #         - KAFKA_ENABLE_KRAFT=yes
-   #         - KAFKA_CFG_PROCESS_ROLES=controller,broker
-   #         - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-   #         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-   #         - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-   #         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-   #         - KAFKA_BROKER_ID=1
-   #         - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-   #         - ALLOW_PLAINTEXT_LISTENER=yes
-   #         - KAFKA_CFG_NODE_ID=1
-   #         - KAFKA_KRAFT_CLUSTER_ID=kafka
-   #         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-   #      healthcheck:
-   #         test: [ "CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9094" ]
-   #         interval: 10s
-   #         timeout: 5s
-   #         retries: 5
+   #         - PMA_HOST=mysql
+   #         - MYSQL_ROOT_PASSWORD=root
+   #      depends_on:
+   #         -  mysql
    #      networks:
    #         - scms-network
    mysql:
@@ -133,6 +137,7 @@ services:
       build: ./api-gateway
       image: ghcr.io/hiepthanhtran/scms-gateway:latest
       restart: unless-stopped
+      hostname: scms-gateway
       container_name: scms-gateway
       ports:
          - '8888:8888'
@@ -154,11 +159,12 @@ services:
       build: ./file-service
       image: ghcr.io/hiepthanhtran/scms-file:latest
       restart: unless-stopped
+      hostname: scms-file
       container_name: scms-file
       ports:
          - '8887:8887'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
          - AWS_SECRET=${AWS_SECRET}
          - S3_BUCKET_NAME=${S3_BUCKET_NAME}
@@ -170,11 +176,12 @@ services:
       build: ./notification-service
       image: ghcr.io/hiepthanhtran/scms-notification:latest
       restart: unless-stopped
+      hostname: scms-notification
       container_name: scms-notification
       ports:
          - '8886:8886'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MAIL_API_KEY=${MAIL_API_KEY}
          - MONGODB_URI=mongodb://root:root@mongodb:27017/notification_service?authSource=admin
       #         - EMAIL_SERVICE_URL
@@ -187,13 +194,14 @@ services:
       build: ./cart-service
       image: ghcr.io/hiepthanhtran/scms-cart:latest
       restart: unless-stopped
+      hostname: scms-cart
       container_name: scms-cart
       ports:
          - '8081:8081'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/cart_service?authSource=admin
-         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - PRODUCT_SERVICE_URL=http://scms-product:8084/product
       depends_on:
          - kafka
          - mongodb
@@ -203,14 +211,15 @@ services:
       build: ./profile-service
       image: ghcr.io/hiepthanhtran/scms-profile:latest
       restart: unless-stopped
+      hostname: scms-profile
       container_name: scms-profile
       ports:
          - '8082:8082'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - NEO4J_URI=bolt://neo4j:7687
          - NEO4J_USERNAME=neo4j
-         - NEO4J_PASSWORD=admin
+         - NEO4J_PASSWORD=admin@123
       depends_on:
          - kafka
          - neo4j
@@ -220,16 +229,17 @@ services:
       build: ./identity-service
       image: ghcr.io/hiepthanhtran/scms-identity:latest
       restart: unless-stopped
+      hostname: scms-identity
       container_name: scms-identity
       ports:
          - '8083:8083'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/identity_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-         - PROFILE_SERVICE_URL=http://scms-profile:8082
-         - FILE_SERVICE_URL=http://scms-file:8887
+         - PROFILE_SERVICE_URL=http://scms-profile:8082/profile
+         - FILE_SERVICE_URL=http://scms-file:8887/file
       #         - JWT_SIGNER_KEY
       #         - JWT_VALID_DURATION
       #         - JWT_REFRESHABLE_DURATION
@@ -242,13 +252,14 @@ services:
       build: ./product-service
       image: ghcr.io/hiepthanhtran/scms-product:latest
       restart: unless-stopped
+      hostname: scms-product
       container_name: scms-product
       ports:
          - '8084:8084'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/product_service?authSource=admin
-         - PROFILE_SERVICE_URL=http://scms-profile:8082
+         - PROFILE_SERVICE_URL=http://scms-profile:8082/profile
       depends_on:
          - kafka
          - mongodb
@@ -258,14 +269,15 @@ services:
       build: ./rating-service
       image: ghcr.io/hiepthanhtran/scms-rating:latest
       restart: unless-stopped
+      hostname: scms-rating
       container_name: scms-rating
       ports:
          - '8085:8085'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/rating_service?authSource=admin
-         - PROFILE_SERVICE_UR= http://scms-profile:8082
-         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - PROFILE_SERVICE_UR= http://scms-profile:8082/profile
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083/identity
       depends_on:
          - kafka
          - mongodb
@@ -275,15 +287,16 @@ services:
       build: ./inventory-service
       image: ghcr.io/hiepthanhtran/scms-inventory:latest
       restart: unless-stopped
+      hostname: scms-inventory
       container_name: scms-inventory
       ports:
          - '8086:8086'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/inventory_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
-         - PRODUCT_SERVICE_URL=http://scms-product:8084
+         - PRODUCT_SERVICE_URL=http://scms-product:8084/product
       depends_on:
          - kafka
          - mysql
@@ -293,18 +306,19 @@ services:
       build: ./order-service
       image: ghcr.io/hiepthanhtran/scms-order:latest
       restart: unless-stopped
+      hostname: scms-order
       container_name: scms-order
       ports:
          - '8087:8087'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - DBMS_URL=jdbc:mysql://mysql:3306/order_service
          - DBMS_USERNAME=root
          - DBMS_PASSWORD=root
          - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-         - IDENTITY_SERVICE_URL=http://scms-identity:8083
-         - PRODUCT_SERVICE_URL=http://scms-product:8084
-         - INVENTORY_SERVICE_URL=http://scms-inventory:8086
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083/identity
+         - PRODUCT_SERVICE_URL=http://scms-product:8084/product
+         - INVENTORY_SERVICE_URL=http://scms-inventory:8086/inventory
       depends_on:
          - kafka
          - mysql
@@ -314,13 +328,14 @@ services:
       build: ./shipping-service
       image: ghcr.io/hiepthanhtran/scms-shipping:latest
       restart: unless-stopped
+      hostname: scms-shipping
       container_name: scms-shipping
       ports:
          - '8088:8088'
       environment:
-         - KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+         - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
          - MONGODB_URI=mongodb://root:root@mongodb:27017/shipping_service?authSource=admin
-         - IDENTITY_SERVICE_URL=http://scms-identity:8083
+         - IDENTITY_SERVICE_URL=http://scms-identity:8083/identity
       depends_on:
          - kafka
          - mongodb
